# beepi_gc9a01a_nt

./: CMakeLists.txt  Notes.md  README.md
assets/: gif_to_frames.py  png_to_rgb565.py  video_to_frames.py
example/: imgview.cpp  testpattern.cpp  testpattern2.cpp  videoview.cpp  videoview_osd.cpp
lib/: beepi_gc9a01a_nt.cpp  beepi_gc9a01a_nt.h
lib/bal/: beepi_hal_linux.cpp
lib/fonts/: beepi_font5x8.h
lib/hal/: beepi_hal.h  beepi_hal_arduino.cpp  beepi_hal_linux.cpp
